--- a/prompt.html
+++ b/prompt.html
@@ -1,1 +1,1 @@
-ده کلمه انگلیسی به همراه ترجمه اش بگو و هر کدام را در یک جمله ی انگلیسی به کار ببر و ترجمه فارسی هر جمله را زیر همان جمله بنویس.
+پنج کلمه انگلیسی به همراه ترجمه اش بگو و هر کدام را در یک جمله ی انگلیسی به کار ببر و ترجمه فارسی هر جمله را زیر همان جمله بنویس.
